Update CV link to be viewable

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a class=nav__link href=/pages/about>About</a>
             <a class=nav__link href=/pages/research>Research</a>
             <a class=nav__link href=/blog>Blog</a>
-            <a class=nav__link href=/files/CV.pdf>CV</a>
+            <a class=nav__link href="https://bharathr98.github.io/files/CV.pdf">CV</a>
         </nav>
     </header>
     <div class=container>
