--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         </div>
         <nav class=nav>
             <a class=nav__link href="#">Home</a>
-            <a class=nav__link href=/pages/about>About</a>
+<!--             <a class=nav__link href=/pages/about>About</a>
             <a class=nav__link href=/pages/research>Research</a>
-            <a class=nav__link href=/blog>Blog</a>
+            <a class=nav__link href=/blog>Blog</a> -->
             <a class=nav__link href="https://bharathr98.github.io/files/CV.pdf">CV</a>
         </nav>
     </header>
